Migrate legacy RAG codebase: - Remove generation module, refactor document ingestion process to support CPU-only mode. - Add a new BM25 keyword-based search index for hybrid retrieval with incremental updates. - Simplify `.env.example` by removing redundant Granite LLM references. - Update server logic: deprecate direct answer generation, return only context for external LLMs. - Revise documentation for syncing flow and manual interactions.

--- a/.env.example
+++ b/.env.example
@@ -14,13 +14,11 @@ RAG_CHROMA_SERVER_API_KEY=
 # Embedding Configuration
 # Model identifier from HuggingFace (used for download, then loads from ./models/)
 RAG_EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-mpnet-base-v2
-RAG_EMBEDDING_DIM=768
 RAG_EMBEDDING_BATCH_SIZE=32
 
 # Chunking Configuration
 RAG_CHUNKING_METHOD=hybrid
 RAG_MAX_TOKENS=512
-RAG_CHUNK_OVERLAP_TOKENS=50
 
 # Document Processing
 RAG_ENABLE_OCR=true
@@ -30,18 +28,8 @@ RAG_OCR_LANGUAGES=eng+ara
 # Retrieval Configuration
 RAG_DEFAULT_TOP_K=5
 
-# Generation Configuration (Granite)
-# Model identifier from HuggingFace (used for download, then loads from ./models/)
-RAG_GRANITE_MODEL_ID=ibm-granite/granite-3.1-2b-instruct
-# 4bit or 8bit or none
-RAG_GRANITE_QUANTIZATION=4bit
-RAG_ANSWER_MODE=both
-RAG_MAX_CONTEXT_CHUNKS=5
-RAG_MAX_NEW_TOKENS=512
-RAG_TEMPERATURE=0.7
-
 # MCP Configuration
-RAG_MCP_SERVER_NAME=dockling-rag
+RAG_MCP_SERVER_NAME=docling-rag
 
 # Language Detection
 RAG_LANGUAGE_DETECTION_ENABLED=true
@@ -50,5 +38,8 @@ RAG_LANGUAGE_DETECTION_ENABLED=true
 RAG_MODELS_DIR=./models
 
 # Performance
+# IMPORTANT: This system is configured for CPU-only operation
+# GPU/CUDA support is explicitly disabled in the codebase
+# All processing (embeddings, OCR, document conversion) uses CPU
 RAG_DEVICE=cpu
 RAG_LOG_LEVEL=INFO
