Remove deprecated documentation files: `HOW_IT_WORKS.md` and `MEMORY_LEAK_FIXES.md`. Add `OFFLINE_MODE_FIX.md` with implementation details for offline mode enforcement.

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,19 @@ RAG_OCR_LANGUAGES=eng+ara
 # Retrieval Configuration
 RAG_DEFAULT_TOP_K=5
 
-# MCP Configuration
+# MCP Server Configuration
 RAG_MCP_SERVER_NAME=docling-rag
+RAG_MCP_TRANSPORT=streamable-http        # Transport protocol
+RAG_MCP_HOST=127.0.0.1                   # Server host
+RAG_MCP_PORT=8080                        # Server port
+RAG_MCP_ENABLE_CLEANUP=true              # Enable resource cleanup on shutdown
+
+# MCP Instructions (shown to clients)
+RAG_MCP_INSTRUCTIONS="You are a RAG (Retrieval-Augmented Generation) assistant with access to indexed documents. Use query_rag to retrieve relevant context and list_all_documents to browse available documents."
+
+# MCP Tool Descriptions (override defaults if needed)
+# RAG_MCP_TOOL_QUERY_DESCRIPTION="Query the RAG system to retrieve relevant document chunks based on semantic similarity. Returns ranked chunks with scores and metadata that can be used as context for answering questions."
+# RAG_MCP_TOOL_LIST_DOCS_DESCRIPTION="List all indexed documents with metadata including file paths, document types, languages, chunk counts, and ingestion timestamps. Supports pagination for large document collections."
 
 # Language Detection
 RAG_LANGUAGE_DETECTION_ENABLED=true
