--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,19 @@ dependencies = [
     "pydantic-settings>=2.0",
     "python-dotenv>=1.0",
     "rank-bm25>=0.2.2",
+    "pypdf>=4.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "ruff>=0.3",
     "mypy>=1.9",
+]
+# GPU support - install with: pip install docling-rag[gpu]
+# Note: For CUDA, you may need to install PyTorch separately:
+#   pip install torch --index-url https://download.pytorch.org/whl/cu121
+gpu = [
+    "accelerate>=0.25.0",
 ]
 
 [project.scripts]
