--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+accelerate==1.12.0
 aiocache==0.12.3
 aiofiles==25.1.0
 aiohappyeyeballs==2.6.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.12.0
 asgiref==3.11.0
 async-timeout==5.0.1
@@ -12,6 +14,7 @@ av==16.0.1
 backoff==2.2.1
 bcrypt==5.0.0
 beartype==0.22.7
+beautifulsoup4==4.14.3
 bidict==0.23.1
 brotli==1.2.0
 build==1.3.0
@@ -20,15 +23,23 @@ certifi==2025.11.12
 cffi==2.0.0
 chardet==5.2.0
 charset-normalizer==3.4.4
+chromadb==1.4.1
 click==8.3.1
 colorama==0.4.6
 coloredlogs==15.0.1
+colorlog==6.10.1
 cryptography==46.0.3
 cyclopts==4.3.0
 defusedxml==0.7.1
+dill==0.4.1
 diskcache==5.6.3
 distro==1.9.0
 dnspython==2.8.0
+docling==2.70.0
+docling-core==2.60.2
+docling-ibm-models==3.11.0
+docling-parse==4.7.3
+-e git+https://github.com/latent-system-notes/docling-rag.git@d80758213ac120e5142c06660781029be9e6d3b7#egg=docling_rag
 docstring_parser==0.17.0
 docutils==0.22.3
 docx2txt==0.8
@@ -41,6 +52,7 @@ et_xmlfile==2.0.0
 Events==0.5
 exceptiongroup==1.3.1
 fake-useragent==2.2.0
+Faker==40.1.2
 fastapi==0.123.9
 fastmcp==2.13.3
 fasttext-wheel==0.9.2
@@ -55,12 +67,14 @@ googleapis-common-protos==1.72.0
 greenlet==3.3.0
 grpcio==1.76.0
 h11==0.16.0
+hf-xet==1.2.0
 hpack==4.1.0
 html5lib==1.1
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 httpx-sse==0.4.3
+huggingface-hub==0.36.0
 humanfriendly==10.0
 hyperframe==6.1.0
 idna==3.11
@@ -76,32 +90,47 @@ Jinja2==3.1.6
 jiter==0.12.0
 jmespath==1.0.1
 joblib==1.5.2
+jsonlines==4.0.0
 jsonpointer==3.0.0
+jsonref==1.1.0
 jsonschema==4.25.1
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
+kubernetes==35.0.0
 langdetect==1.0.9
+latex2mathml==3.78.1
 ldap3==2.9.1
 lxml==6.0.2
 Mako==1.3.10
 Markdown==3.10
 markdown-it-py==4.0.0
+marko==2.2.2
 MarkupSafe==3.0.3
 marshmallow==3.26.1
 mcp==1.22.0
 mdurl==0.1.2
 mmh3==5.2.0
 more-itertools==10.8.0
+mpire==2.10.2
 mpmath==1.3.0
 multidict==6.7.0
+multiprocess==0.70.19
 mypy_extensions==1.1.0
 networkx==3.6
 numpy==2.2.6
 oauthlib==3.3.1
 olefile==0.47
+omegaconf==2.3.0
 onnxruntime==1.23.2
 openapi-pydantic==0.5.1
-opentelemetry-proto==1.38.0
+opencv-python==4.13.0.90
+openpyxl==3.1.5
+opentelemetry-api==1.39.1
+opentelemetry-exporter-otlp-proto-common==1.39.1
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
 orjson==3.11.4
 overrides==7.7.0
 packaging==25.0
@@ -114,6 +143,8 @@ peewee-migrate==1.14.3
 pfzy==0.3.4
 pillow==11.3.0
 platformdirs==4.5.0
+pluggy==1.6.0
+polyfactory==3.2.0
 posthog==5.4.0
 primp==0.15.0
 prompt_toolkit==3.0.52
@@ -138,6 +169,7 @@ pydantic_core==2.41.5
 pydub==0.25.1
 Pygments==2.19.2
 PyJWT==2.10.1
+pylatexenc==2.10
 pymdown-extensions==10.17.2
 pymssql==2.3.11
 PyMuPDF==1.26.6
@@ -146,6 +178,7 @@ PyMySQL==1.1.1
 pypandoc==1.16.2
 pyparsing==3.2.5
 pypdf==6.4.0
+pypdfium2==5.3.0
 pyperclip==1.11.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
@@ -154,6 +187,7 @@ pyspnego==0.12.0
 pytesseract==0.3.13
 python-bidi==0.6.7
 python-dateutil==2.9.0.post0
+python-docx==1.2.0
 python-dotenv==1.2.1
 python-iso639==2025.11.16
 python-jose==3.5.0
@@ -170,6 +204,7 @@ pyxlsb==1.0.10
 PyYAML==6.0.3
 rank-bm25==0.2.2
 RapidFuzz==3.14.3
+rapidocr==3.5.0
 redis==7.1.0
 referencing==0.36.2
 regex==2025.11.3
@@ -182,8 +217,12 @@ rich==13.9.4
 rich-rst==1.3.2
 rpds-py==0.29.0
 rsa==4.9.1
+rtree==1.4.1
 safetensors==0.7.0
+scikit-learn==1.8.0
 scipy==1.16.3
+semchunk==2.2.2
+sentence-transformers==5.2.0
 sentencepiece==0.2.1
 setuptools==80.9.0
 shapely==2.1.2
@@ -199,11 +238,22 @@ sse-starlette==3.0.3
 sspilib==0.4.0
 starlette==0.50.0
 sympy==1.14.0
+tabulate==0.9.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.12.0
-torch==2.9.1
+tokenizers==0.22.2
+torch==2.10.0
+torchvision==0.25.0
 tqdm==4.67.1
+transformers==4.57.6
+tree-sitter==0.25.2
+tree-sitter-c==0.24.1
+tree-sitter-javascript==0.25.0
+tree-sitter-python==0.25.0
+tree-sitter-typescript==0.23.2
+typer==0.19.2
+typer-slim==0.21.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
@@ -219,6 +269,7 @@ wcwidth==0.2.14
 webencodings==0.5.1
 websocket-client==1.9.0
 websockets==15.0.1
+wheel==0.46.3
 win32_setctime==1.2.0
 wrapt==2.0.1
 wsproto==1.3.2
