--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,95 +3,38 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src", "cli", "config"]
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "src/",
-    "cli/",
-    "config/",
-    "models/.gitkeep",
-    "pyproject.toml",
-    "README.md",
-    "LICENSE",
-]
+packages = ["src", "cli"]
 
 [project]
 name = "docling-rag"
 version = "0.1.0"
-description = "Production-ready RAG system with Docling and ChromaDB"
-readme = "README.md"
-license = {text = "MIT"}
-authors = [
-    {name = "latent-system-notes", email = "latent.system.notes@gmail.com"}
-]
-keywords = ["rag", "docling", "chromadb", "mcp", "document-processing", "ai"]
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-]
+description = "RAG system with Docling and ChromaDB"
 requires-python = ">=3.11"
 dependencies = [
-    "docling>=2.68.0",
-    "chromadb>=0.4.0",
-    "sentence-transformers>=2.5",
-    "torch>=2.2",
+    "docling>=2.70",
+    "chromadb>=1.4",
+    "sentence-transformers>=5.0",
+    "torch>=2.10",
     "langdetect>=1.0.9",
-    "fastmcp>=0.4",
-    "typer>=0.12",
-    "rich>=13.0",
-    "tqdm>=4.65",
-    "pydantic>=2.0",
-    "pydantic-settings>=2.0",
-    "python-dotenv>=1.0",
+    "fastmcp>=2.0",
+    "typer>=0.19",
+    "rich>=13.9",
+    "tqdm>=4.67",
+    "pydantic>=2.12",
+    "pydantic-settings>=2.12",
+    "python-dotenv>=1.2",
     "rank-bm25>=0.2.2",
-    "pypdf>=4.0",
-    "pywin32>=306; sys_platform == 'win32'",
+    "pypdf>=6.0",
+    "rapidocr>=3.5",
+    "onnxruntime>=1.23",
+    "pywin32>=311; sys_platform == 'win32'",
 ]
 
 [project.optional-dependencies]
-dev = [
-    "ruff>=0.3",
-    "mypy>=1.9",
-    "pytest>=8.0",
-]
-# GPU support - install with: pip install docling-rag[gpu]
 gpu = [
-    "accelerate>=0.25.0",
+    "accelerate>=1.12",
+    "onnxruntime-gpu>=1.23",
 ]
-# For building standalone executables
-build = [
-    "pyinstaller>=6.0",
-    "nuitka>=2.0",
-]
-
-[project.urls]
-Homepage = "https://github.com/latent-system-notes/docling-rag"
-Documentation = "https://github.com/latent-system-notes/docling-rag#readme"
-Repository = "https://github.com/latent-system-notes/docling-rag"
-Issues = "https://github.com/latent-system-notes/docling-rag/issues"
 
 [project.scripts]
 rag = "cli.cli:app"
-
-[tool.ruff]
-line-length = 100
-target-version = "py311"
-
-[tool.ruff.lint]
-select = ["E", "F", "I", "N", "W", "UP"]
-ignore = ["E501"]
-
-[tool.mypy]
-python_version = "3.11"
-strict = true
-warn_return_any = true
-warn_unused_configs = true
-
