Add `.env.techpub` and `run-techpub.sh` for techpub configuration; implement batch processing in `chroma_client` and enhance vector storage; update pipeline and logging for CUDA integration and performance optimization.

--- a/.env.techpub
+++ b/.env.techpub
@@ -1,4 +1,4 @@
-MCP_SERVER_NAME="safety-rag"
+MCP_SERVER_NAME="techpub-rag"
 MCP_PORT="9090"
 
 DATA_DIR="/workspace/data"
@@ -11,7 +11,7 @@ WARNING : DO NOT WRITE JSON IN YOUR RESPONSE THIS IS WRONG : {"query":"xxxxxxx",
 If you write JSON, the tool WILL NOT be called ! The user will just see your JSON as broken text.
 Make sure you only call the tool one time do not create another subsequent request, make summary after the first call.
 DO NOT make subsequent search, use what ever information you received from search_documents.
-The tool call format is:{"tool": "functions.JAC_safety_search_documents","arguments": {"query": "...","max_results": 10}}
+The tool call format is:{"tool": "functions.JAC_techpub_search_documents","arguments": {"query": "...","max_results": 10}}
 ###
 
 ### CRITICAL INSTRUCTION :
